# TerminalBasedFileManager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/tbfm/: DirInfoUI.h  FocusableButton.h  SimpleDirInfo.h  Utility.hpp
src/: DirInfoUI.cpp  SimpleDirInfo.cpp  Utility.cpp
