cmake_minimum_required(VERSION 3.14)

set(ROOT_PRJ_NAME TBFM)
project(${ROOT_PRJ_NAME} LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_executable(${ROOT_PRJ_NAME}
  main.cpp
)

target_link_libraries(${ROOT_PRJ_NAME}
)

#install(TARGETS ${ROOT_PRJ_NAME}
#    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})

